--- a/_data/offers.yml
+++ b/_data/offers.yml
@@ -1,164 +1,222 @@
 
-- title: Zauberhaftes Strandresort auf Kreta
-  location: The Royal Blue – A Luxury Beach Resort, Rethymno, Kreta, Griechenland
-  description: Luxus am Privatstrand in Panormos – inkl. Flügen, Privattransfers & Halbpension
+- title: Athen & Kykladen-Inselhüpfen im Paradies
+  location: Rundreise, Griechenland
+  description: Der Zauber Athens und der griechischen Kykladen - inkl. Hotel, Frühstück, alle Transfers, Fährfahrten und Flügen!
+  price: 819
+  price-description: pro Person basierend auf 2 Personen für 7 Nächte
+  saved: 28
+  tag: config-flights
+  expires:
+  image: https://d2g6qre7voj6kv.cloudfront.net/webRedirects/158/35cf248c_07c4_4185_9236_dcc50c070435.jpg
+  link: https://www.secretescapes.de/inselhuepfen-im-paradies-kykladen-de/sale-wrd
+
+- title: Fly & Drive Kreta mit Weinprobe
+  location: Rundreise, Griechenland
+  description: "Kreta entdecken und schmecken: 4-Sterne-Hotels inkl. Weinprobe, Frühstück & Flügen"
+  price: 469
+  price-description: pro Person basierend auf 2 Personen für 7 Nächte
+  saved:
+  expires:
+  tag: config-flights
+  image: https://d1x3cbuht6sy0f.cloudfront.net/sales/72378/346bbca7_2e7c_4db7_becc_17da5e0be741.jpg
+  link: https://de.sales.secretescapes.com/115247/fly-drive-kreta-mit-weinbrobe-de/
+
+- title: Mondäne 5*-Apartments auf Chalkidiki
+  location: Pefki Deluxe Residences, Pefkochori, Chalkidiki, Griechenland
+  description: Ägäis-Auszeit im stylishen Aparthotel – inkl. Flügen, Transfers, Frühstück & Begrüßungsgetränk
+  price: 249
+  price-description: pro Person basierend auf 2 Personen für 5 Nächte
+  saved: 32
+  tag: flights
+  expires: 2019/12/09
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/597/679bc4ba_a82e_42cb_b66f_a216882c1152.jpg
+  link: https://www.secretescapes.de/pefki-deluxe-residences-chalkidiki-griechenland-de-1/sale-ihp
+
+- title: "Chalkidiki: Zwischen Strand & antiken Tempeln"
+  location: Ammon Zeus Luxury Beach Hotel, Kalithea, Chalkidiki, Griechenland
+  description: Maritimes Ambiente in Kallithea – inkl. Flügen, Transfers, Halbpension, 1 Flasche Wein & Extras
+  price: 399
+  price-description: pro Person basierend auf 2 Personen für 7 Nächte
+  saved: 25
+  tag: flights
+  expires: 2019/12/09
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/470/d7a3a7fd_a845_4426_9ccc_358af9c23724.jpg?auto=format,compress
+  link: https://www.secretescapes.de/ammon-zeus-chalkidiki-griechenland-de/sale-ihp
+
+- title: Athen & Inselhopping Kykladen
+  location: Rundreise, Griechenland
+  description: Die Schönheit Griechenlands von Athen nach Tinos, Syron & Serifos inkl. 10 Nächte in schnuckeligen Hotels, Frühstück, Transfers, Fährfahrten & Flügen!
+  price: 789
+  price-description: pro Person basierend auf 2 Personen für 10 Nächte
+  saved:
+  tag: config-flights
+  expires:
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/105222/bb7d6667_60e3_4131_91ef_9aa135471fcf.jpg
+  link: https://de.sales.secretescapes.com/115270/athen-inselhopping-kykladen-de/
+
+- title: 5*-Luxusurlaub auf Rhodos
+  location: Lindian Village, Lardos, Rhodos, Griechenland
+  description: Edle Suiten auf Rhodos – inkl. Flügen, Transfers & Halbpension
+  price: 599
+  price-description: pro Person. basierend auf 2 Personen für 7 Nächte
+  saved: 45
+  tag: flights
+  expires: 2019/12/23
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/123/cd03b7c6_1e6b_4011_a3a2_eb4defaaa849.jpg?auto=format,compress
+  link: https://www.secretescapes.de/lindian-village-lardos-greece-de-2/sale-ihp
+
+- title: Resort-Auszeit an der Nordküste Kretas
+  location: Giannoulis Cavo Spada Luxury Sports & Leisure Resort & Spa, Kreta, Griechenland
+  description: Wellness-Resort am Strand – inkl. Flügen, Rail&Fly, Transfer, All-inclusive & Extras
+  price: 679
+  price-description: pro Person. basierend auf 2 Personen für 7 Nächte
+  saved: 18
+  tag: flights
+  expires: 2019/12/23
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/99453/98c0d25e_d70b_4303_9069_1d1fd71fbb0a.jpg?auto=format,compress
+  link: https://www.secretescapes.de/resort-auszeit-an-der-nordkueste-kretas-cavo-spada-luxury-sports-and-leisure-resort-and-spa-kreta-griechenland/sale
+
+- title: Panoramablick auf das Ionische Meer
+  location: Grecotel Eva Palace, Kommeno, Korfu, Griechenland
+  description: Traumhaftes 5*-Hotel – inkl. All-inclusive, 1 Flasche Wein, Früchten & Extras
+  price: 144
+  price-description: pro Unterkunft pro Nacht
+  saved: 64
+  expires: 2019/12/23
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/81986/930931f1_592a_4c67_bf83_4b9f3e7b54c7.jpg?auto=format,compress
+  link: https://www.secretescapes.de/panoramablick-auf-das-ionische-meer-grecotel-eva-palace-kommeno-korfu-griechenland/sale
+
+- title: Schicke Suiten an Kretas Nordküste
+  location: Creta Blue Boutique Hotel & Suites, Koutouloufari, Kreta, Griechenland
+  description: Edles Boutiquehotel an Kretas Nordküste – inkl. Halbpension, 1x Lunch & Extras
+  price: 107
+  price-description: pro Suite pro Nacht
+  saved: 50
+  expires: 2019/12/23
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/106758/f84eff40_2489_4b9a_9ab3_0a3ead96277e.jpg?auto=format,compress
+  link: https://www.secretescapes.de/schicke-suiten-an-kretas-nordkueste-creta-blue-boutique-hotel-and-suites-koutouloufari-kreta-griechenland/sale
+
+- title: Luxusverwöhnte Auszeit auf Kos
+  location: Diamond Deluxe Hotel, Kos, Griechenland
+  description: Inkl. Halbpension, 1 Flasche Wein mit Obst, Begrüßungsgetränk, Spa-Ermäßigung & Extra
+  price: 113
+  price-description: pro Unterkunft pro Nacht
+  saved: 51
+  expires: 2019/12/23
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/76466/da755c0d_892e_42bc_b654_a99aef77bdcb.jpg?auto=format,compress
+  link: https://www.secretescapes.de/luxusverwohnte-auszeit-auf-kos-diamond-deluxe-hotel-kos-griechenland/sale
+
+- title: Verwöhntage auf der Trauminsel Kreta
+  location: Ikaros Beach Luxury Resort & Spa, Malia, Kreta, Griechenland
+  description: Luxus am Mittelmeer – inkl. All-inclusive, 1x Massage, Begrüßungsgetränk & Extras
+  price: 125
+  price-description: pro Unterkunft pro Nacht
+  saved: 53
+  expires: 2019/12/23
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/99429/b3aed280_8af9_4cee_bb7b_2c163b0dafa0.jpg?auto=format,compress
+  link: https://www.secretescapes.de/verwohntage-auf-der-trauminsel-kreta-ikaros-beach-luxury-resort-and-spa-malia-kreta-griechenland/sale
+
+- title: Mediterrane Eleganz auf Zypern
+  location: Grecian Park Hotel, Protaras, Zypern, Griechenland
+  description: Luxusurlaub zur Frühlingszeit auf Aphrodites Heimatinsel – inkl. Frühstück oder Halbpension
+  price: 78
+  price-description: pro Zimmer pro Nacht
+  saved: 53
+  expires: 2019/12/23
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/93423/cab2d283_03a8_4c5a_b15d_d32afafbb088.jpg?auto=format,compress
+  link: https://www.secretescapes.de/mediterrane-eleganz-auf-zypern-grecian-park-hotel-protaras-zypern-griechenland/sale
+
+- title: Hideaway unter der griechischen Sonne
+  location: Miraggio Thermal Spa Resort, Chalkidiki, Griechenland
+  description: Mediterrane Atempause – inkl. Flügen, Transfers, Begrüßungsgetränk & Halbpension
   price: 699
   price-description: pro Person. basierend auf 2 Personen für 7 Nächte
-  saved: 27
-  expires: 2019/10/07
-  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/180/741a6549_00c2_49a4_a5d9_05593b48bec9.jpg?auto=format,compress
-  link: http://bit.ly/2mAMOXR
+  saved: 32
+  tag: flights
+  expires: 2019/12/30
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/32/248a9023_85fa_4a99_9a42_45d386b05102.jpg?auto=format,compress
+  link: https://www.secretescapes.de/miraggio-thermal-spa-rersort-chalkidiki-griechenland-de-1/sale-ihp
 
-- title: All-inclusive-Auszeit auf Kos
-  location: Ammos Resort, Mastichari, Kos, Südliche Ägäis, Griechenland
-  description: Strandresort inkl. All-inclusive, Begrüßungsgetränk & Nutzung von Liegen mit Sonnenschirm
-  price: 69
-  price-description: pro Zimmer pro Nacht
-  saved: 61
-  expires: 2019/10/07
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/84165/97253164_a38c_4690_9fd8_0e18882f4bb1.jpg?auto=format,compress
-  link: http://bit.ly/2nf1fkK
+- title: Wo Ihnen Athen zu Füßen liegt
+  location: Radisson Blu Park Hotel Athens, Athen, Griechenland
+  description: Athens Flair mit Dachpool – inkl. Flügen, Frühstück & Privattransfers
+  price: 215
+  price-description: pro Person. basierend auf 2 Personen für 2 Nächte
+  saved: 35
+  tag: flights
+  expires: 2019/12/30
+  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/1037/b2d330d9_23a6_4f6a_8ef7_4ddfb426ba75.jpg?auto=format,compress
+  link: https://www.secretescapes.de/radisson-blu-park-hotel-athens-athen-griechenland-de/sale-ihp
 
-- title: Griechischer Inseltraum auf Santorini
-  location: Santorini Dreams Villas, Pirgos, Santorini, Griechenland
-  description: Inselperle Santorini – inkl. Frühstück, Begrüßungsgetränk, 1 Flasche Wein & 1 Obstkorb
-  price: 266
-  price-description: pro Suite pro Nacht
-  saved: 51
-  expires: 2019/10/07
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/101835/3872d215_9a25_4dea_b2fd_90aac45ce11b.jpg?auto=format,compress
-  link: http://bit.ly/2oTkh0h
-
-- title: Griechische Inselperle im Mittelmeer
-  location: Contessina Hotel, Tsilivì, Zakynthos, Griechenland
-  description: Griechische Sonne und moderner Komfort – inkl. Frühstück, Willkommensgeschenk & Extras
-  price: 79
-  price-description: pro Unterkunft pro Nacht
-  saved: 56
-  expires: 2019/10/14
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/92538/97707709_5ae7_449d_a8db_2ae1bca7fe4b.jpg?auto=format,compress
-  link: http://bit.ly/2oVXPnn
-
-- title: Griechischer Inseltraum auf Kreta
-  location: SENTIDO Vasia Resort & Spa, Sisi, Kreta, Griechenland
-  description: Erholen & Sonne tanken – inkl. All-inclusive
-  price: 80
-  price-description: pro Zimmer pro Nacht
-  saved: 27
-  expires: 2019/10/07
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/102188/d839fa9b_a53a_45ae_8038_8d654e3149f4.jpg?auto=format,compress
-  link: http://bit.ly/2oUGU4C
-
-- title: Exclusives All-inclusive-Resort auf Rhodos
-  location: Electra Palace Rhodes, Ialyssos, Rhodos, Griechenland
-  description: Superior-Zimmer o. Familien-Suite mit Gourmetverpflegung, Privatstrand & Spa
-  price: 110
-  price-description: pro Unterkunft pro Nacht
-  saved: 43
-  expires: 2019/10/14
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/98453/0cf9ad92_1aed_430b_82d5_fc89dda7f9e4.jpg?auto=format,compress
-  link: http://bit.ly/2nq5h9J
-
-- title: Wellness & Meer an der Ägäis
-  location: Dion Palace, Gritsa, Litochoro, Zentralmakedonien, Griechenland
-  description: Griechisches 5*-Resort – inkl. Halbpension, Zimmer-Upgrade, 1 Flasche Wein & Spa-Extras
-  price: 72
+- title: Verwöhn-Atmosphäre in Griechenland
+  location: Diana Group Hotels - Diana Palace, Argassi, Zakynthos, Griechenland
+  description: Ein Hauch von Luxus in Griechenland –  inkl. All-inclusive, Sekt & Begrüßungsgetränk
+  price: 99
   price-description: pro Zimmer pro Nacht
   saved: 58
-  expires: 2019/10/14
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/70593/d19d29db_7a5f_4847_9525_b453bbefdcc1.jpg?auto=format,compress
-  link: http://bit.ly/2oTmUiF
+  expires: 2020/01/13
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/98364/b7c9be36_520f_4268_b291_fb0b5054e424.jpg?auto=format,compress
+  link: https://www.secretescapes.de/verwohn-atmosphaere-in-griechenland-diana-group-hotels-diana-palace-argassi-zakynthos-griechenland1/sale
 
-- title: Griechischer All-inclusive-Sommer auf Rhodos
-  location: Lutania Beach Hotel, Kolymbia, Rhodos, Griechenland
-  description: Ägäis, Traumstrand & Kultur - inkl. Flügen, Transfers, Zimmer mit Meerblick & All-inclusive
-  price: 499
+- title: Luxusglück auf Korfu
+  location: Rodostamo Hotel & Spa, Korfu, Griechenland
+  description: Strand & Meer auf Korfu – inkl. Flügen, Rail&Fly, Transfers, Halbpension & Extras
+  price: 607
   price-description: pro Person. basierend auf 2 Personen für 7 Nächte
-  saved: 9
-  flight-tag: true
-  expires: 2019/10/14
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/97844/b8026439_c0fa_4026_b7c5_d79dcdf205ac.jpg?auto=format,compress
-  link: http://bit.ly/2nnNW1i
+  saved: 19
+  tag: flights
+  expires: 2020/01/13
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/99211/30656983_0b74_4736_8d86_5b4909c3be57.jpg?auto=format,compress
+  link: https://www.secretescapes.de/luxusglueck-auf-korfu-rodostamo-hotel-and-spa-korfu-griechenland/sale
 
-- title: Entspannte Sonnentage auf Kreta
-  location: Rethymno, Kreta, Griechenland
-  description: Kretische Ägäis – inkl. Upgrade auf Ultra All inclusive, Fruchtkorb & 1 Flasche Wein
-  price: 203
+- title: Zakynthos - Griechische Inselperle im Mittelmeer
+  location: Contessina Hotel, Tsilivì, Zakynthos, Griechenland
+  description: Moderner Komfort und Sonne satt - inkl. Flügen, Rail & Fly, Transfers, Halbpension & Extras
+  price: 649
+  price-description: pro Person. basierend auf 2 Personen für 7 Nächte
+  saved: 55
+  tag: flights
+  expires: 2020/01/13
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/106757/f64398e5_6cd0_4a24_82ea_2f00aa98c411.jpg?auto=format,compress
+  link: https://www.secretescapes.de/griechische-inselperle-im-mittelmeer-contessina-hotel-tsilivi-zakynthos-griechenland-de-1-wrdpkg/sale
+
+- title: Wunderschöne Strandauszeit auf Chalkidiki
+  location: Alexander the Great Beach Hotel, Chalkidiki, Griechenland
+  description: Entspannter Badeurlaub zwischen Pool & Sandstrand – inkl. Zimmer-Upgrade & Halbpension
+  price: 63
   price-description: pro Zimmer pro Nacht
-  saved: 60
-  expires: 2019/10/14
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/91474/9d0d4a4f_5b90_492e_89e6_3866d58ecbcb.jpg?auto=format,compress
-  link: http://bit.ly/2oNXWkH
+  saved: 62
+  expires: 2019/12/23
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/97079/ab06da26_6ca2_40b5_b5b9_099811a70a30.jpg?auto=format,compress
+  link: https://www.secretescapes.de/wunderschone-strandauszeit-auf-chalkidiki-alexander-the-great-beach-hotel-chalkidiki-griechenland-1/sale
 
-- title: Familienfun unter der griechischen Sonne
-  location: Cronwell Platamon Resort, Platamonas, Pieria, Griechenland
-  description: Auszeit für die ganze Familie – inkl. All-inclusive
-  price: 89
+- title: Kretische Träume im All-Inclusive-Resort
+  location: Meli Palace All-Inclusive Resort, Sissi, Kreta, Griechenland
+  description: Familienfreundliches Resort in Kretas Norden mit Privatstrand – inkl. All-inclusive & Extras
+  price: 113
   price-description: pro Zimmer pro Nacht
-  saved: 44
-  expires: 2019/10/14
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/102508/ffbef694_bf36_4572_8292_ec99f94af72e.jpg?auto=format,compress
-  link: http://bit.ly/2oVasiw
+  saved: 36
+  expires: 2020/01/13
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/17121/d08e28f8_9fed_40d8_b2e7_2a1c628eff14.jpg?auto=format,compress
+  link: https://www.secretescapes.de/kretische-traeume-im-all-inclusive-resort-meli-palace-all-inclusive-resort-sissi-kreta-griechenland/sale
 
-- title: Frühbucher-Luxus an der griechischen Agäis
-  location: Cosmopolitan Hotel & Spa, Paralia bei Thessaloniki, Griechenland
-  description: Mediterranes Glück – inkl. Flügen, Privattransfers, Halbpension & 1x Entspannungsmassage
-  price: 365
-  price-description: pro Person basierend auf 2 Personen für 5 Nächte
-  saved: 28
-  flight-tag: true
-  expires: 2019/10/21
-  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/441/f3e8d400_5503_4c03_9657_887e401d3db6.jpg?auto=format,compress
-  link: https://www.secretescapes.de/cosmopolitan-hotel-katerini-katerini-griechenland-de-1/sale-ihp
-
-- title: Griechische Glanztage auf Kos
-  location: Aeolos Beach Hotel, Lámbi, Kos, Griechenland
-  description: Inselurlaub mit Meerblick – inkl. Flügen, Transfers & Halbpension
-  price: 459
-  price-description: pro Person basierend auf 2 Personen für 7 Nächte
-  saved: 24
-  flight-tag: true
-  expires: 2019/10/21
-  image: https://d2g6qre7voj6kv.cloudfront.net/inHousePackages/204/03be951a_a1f6_4775_9a52_163fefbdfa20.jpg?auto=format,compress
-  link: https://www.secretescapes.de/the-aeolos-beach-hotel-kos-griechenland/sale-ihp
-
-- title: Sonne satt im 5*-Resort auf Chalkidiki
-  location: Cronwell Resort Sermilia, Psakoudia, Chalkidiki, Griechenland
-  description: Frühbucher-Termine für den Traumurlaub 2020 auf Chalkidiki – inkl. All-inclusive & Obstkorb
-  price: 88
-  price-description: pro Unterkunft pro Nacht
-  saved: 45
-  expires: 2019/10/21
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/84500/13d40163_1862_4a72_8aa7_e1c5f43a5161.jpg?auto=format,compress
-  link: https://www.secretescapes.de/sonne-satt-im-5-star-resort-auf-chalkidiki-cronwell-resort-sermilia-psakoudia-chalkidiki-griechenland/sale
-
-- title: Sommerflair auf Kreta im neu eröffneten Hotel
-  location: Vasia Boulevard Boutique Hotel, Kreta, Griechenland
-  description: Adults-only Hotel im Norden Kretas – inkl. Flügen, Transfers & Halbpension
-  price: 444
-  price-description: pro Person basierend auf 2 Personen für 7 Nächte
-  saved: 9
-  flight-tag: true
-  expires: 2019/10/21
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/102753/97e150c6_07aa_4371_aecf_6937b757c4ce.jpg?auto=format,compress
-  link: https://www.secretescapes.de/sommerflair-auf-kreta-im-neu-eroffneten-hotel-vasia-boulevard-boutique-hotel-kreta-griechenland-wrdpkg/sale
-
-- title: "Korfu: Inseltraum im Ionischen Meer"
-  location: Pictures Suites, Agios Stefanos, Korfu, Griechenland
-  description: Edle Suiten mit Meerblick – inkl. 1 Flasche Wein & Obst zur Begrüßung, Frühstück & 1x Dinner
-  price: 146
-  price-description: pro Suite pro Nacht
-  saved: 60
-  expires: 2019/10/21
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/102831/d14a3504_5fe8_4702_b2f1_f5b7438c88f4.jpg?auto=format,compress
-  link: https://www.secretescapes.de/korfu-inseltraum-im-ionischen-meer-pictures-suites-agios-stefanos-korfu-griechenland/sale
-
-- title: "Kreta: Strandurlaub auf der Sonneninsel"
-  location: Kalyves Beach Hotel, Chania, Kreta, Griechenland
-  description: Romantisches Seaside-Retreat am Strand – inkl. All-inclusive & Sauna- sowie Whirlpool-Nutzung
-  price: 75
+- title: "Neueröffnung: Luxus in der Ägäis"
+  location: Mythic Exclusive Retreat, Paros, Griechenland
+  description: Spektakuläre Sonnenuntergänge auf Paros – inkl. Frühstück, Transfers & Begrüßungsgetränk
+  price: 156
   price-description: pro Zimmer pro Nacht
-  saved: 50
-  expires: 2019/10/21
-  image: https://d2g6qre7voj6kv.cloudfront.net/sales/102950/8153beeb_488a_4877_a1b9_6abecfca1800.jpg?auto=format,compress
-  link: https://www.secretescapes.de/kreta-strandurlaub-auf-der-sonneninsel-kalyves-beach-hotel-chania-kreta-griechenland/sale
+  saved: 54
+  expires: 2020/01/13
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/107211/693f7225_2c74_489f_807c_a1f2bbf98651.jpg?auto=format,compress
+  link: https://www.secretescapes.de/neueroffnung-luxus-in-der-agaeis-mythic-exclusive-retreat-paros-griechenland/sale
+
+- title: "Neueröffnung: Mittelmeer-Magie auf Korfu"
+  location: KAIRABA Mythos Hotel & Spa, Boukari, Korfu, Griechenland
+  description: Superior-Doppelzimmer mit Meerblick – inkl. Flügen, Transfers, Ultra-All-inclusive & Extras
+  price: 669
+  price-description: pro Person. basierend auf 2 Personen für 7 Nächte
+  saved: 27
+  tag: flights
+  expires: 2019/12/23
+  image: https://d2g6qre7voj6kv.cloudfront.net/sales/105992/f4090edc_98b0_4fee_a00a_fa11d34a4a84.jpg?auto=format,compress
+  link: https://www.secretescapes.de/mittelmeer-magie-auf-korfu-kairaba-mythos-palace-boukari-korfu-griechenland/sale
